# geosemops

./: .gitignore  INSTALL.md  INTENT.md  README.md  SPEC.md  pyproject.toml  tests.yaml
docs/: DESIGN.md
src/geosemops/: __init__.py
src/geosemops/llm/: __init__.py
src/geosemops/operators/: __init__.py
src/geosemops/utils/: __init__.py
