[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "geosemops"
version = "0.1.0"
description = "Semantic Operators for LLM-Powered Geospatial Data Processing"
readme = "README.md"
license = "MIT"
requires-python = ">=3.10"
authors = [
    { name = "Abhishek Dwivedi" }
]
keywords = ["geospatial", "llm", "duckdb", "semantic", "gis", "entity-resolution"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering :: GIS",
]

dependencies = [
    "duckdb>=1.0.0",
    "litellm>=1.0.0",
    "jinja2>=3.0.0",
    "pydantic>=2.0.0",
    "sentence-transformers>=2.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "pytest-cov>=4.0.0",
    "ruff>=0.1.0",
    "mypy>=1.0.0",
]

[project.urls]
Homepage = "https://github.com/agyaatcoder/geosemops"
Documentation = "https://github.com/agyaatcoder/geosemops#readme"
Repository = "https://github.com/agyaatcoder/geosemops"
Issues = "https://github.com/agyaatcoder/geosemops/issues"

[tool.hatch.build.targets.wheel]
packages = ["src/geosemops"]

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W", "UP"]

[tool.mypy]
python_version = "3.10"
strict = true

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-v"
